--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.siddiqei.dailytaskbeta">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,15 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DailyTaskBeta">
-        <activity android:name=".ui.RegistrationActivity"
-            android:theme="@style/Theme.Design.Light.NoActionBar">
-
-        </activity>
-        <activity android:name=".ui.SignInActivity"
-            android:theme="@style/Theme.Design.Light.NoActionBar"></activity>
-        <activity android:name=".ui.AddCourseActivity" >
-
-        </activity>
+        <activity android:name=".ui.ShowEbook"></activity>
+        <activity android:name=".ui.EbookActivity" />
+        <activity android:name=".ui.AddNotesActivity" />
+        <activity android:name=".ui.NotesActivity" />
+        <activity
+            android:name=".ui.RegistrationActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
+        <activity
+            android:name=".ui.SignInActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
+        <activity android:name=".ui.AddCourseActivity" />
         <activity android:name=".ui.CourseDetailsActivity" />
         <activity
             android:name=".ui.CourseListActivity"
@@ -33,9 +35,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.MainActivity" />
 
-        </activity>
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
