Ebook, Note, Event,Notice

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.siddiqei.dailytaskbeta">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DailyTaskBeta">
-        <activity android:name=".ui.ShowEbook"></activity>
+        <activity android:name=".ui.EventActivity"></activity>
+        <activity android:name=".ui.NoticeActivity" />
+        <activity android:name=".ui.ShowEbook" />
         <activity android:name=".ui.EbookActivity" />
         <activity android:name=".ui.AddNotesActivity" />
         <activity android:name=".ui.NotesActivity" />
