--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.siddiqei.dailytaskbeta">
 
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission
         android:name="android.permission.ACCESS_COARSE_LOCATION"
         android:maxSdkVersion="22" />
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -15,7 +16,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DailyTaskBeta">
-        <activity android:name=".ui.EventActivity"></activity>
+        <activity android:name=".Alarm.AlarmActivity"></activity>
+        <activity android:name=".ui.EventActivity" />
         <activity android:name=".ui.NoticeActivity" />
         <activity android:name=".ui.ShowEbook" />
         <activity android:name=".ui.EbookActivity" />
